[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://grafik/other/Big_Bottom_Typeface_Normal.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 117, 10 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -48.0
margin_top = 375.0
margin_right = 1952.0
margin_bottom = 378.0
color = Color( 0.286275, 0.156863, 0.0588235, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 120 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 96, 448 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 107, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 0.180392, 0.0509804, 0.0509804, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 448.0
margin_right = 562.0
margin_bottom = 73.0
theme = SubResource( 3 )
text = "Score: "

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
